# verifiable-agent-loop

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: building-effective-loops.md  examples.md
examples/: python-project.toml
src/agent_loop/: __init__.py  cli.py  config.py  process.py  runner.py
tests/: test_config.py  test_runner.py
