[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "verifiable-agent-loop"
version = "0.1.0"
description = "A practical coding-agent loop with deterministic verification, bounded retries, and complete audit trails."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Stephen McDermott"}]
keywords = ["agents", "coding-agent", "agent-loop", "loop-engineering", "verification"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
agent-loop = "agent_loop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
